# event_analyser_ai_bot

./: .gitignore  LICENSE  README.md  example.env  main.py  pyproject.toml
eventanalyzer/: bot.py  config.py  models.py  repository.py  ui.py
eventanalyzer/analyzer/: __init__.py  analysis.py  claims.py  message.py  pipeline.py  schemas.py  search.py  storage.py
eventanalyzer/analyzer/prompts/: analysis.j2  analysis_with_claims.j2  claims_extraction.j2  telegram_message.j2
eventanalyzer/localization/: __init__.py  service.py
eventanalyzer/localization/locales/: de.yaml  en.yaml  es.yaml  fr.yaml  ru.yaml
tests/: test_analyzer.py  test_localization.py  test_models.py
